--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@cucumber/cucumber": "^11.2.0",
     "dotenv": "^16.4.7",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "zod": "^4.1.13"
   }
 }
